<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fleet Commander</string>
    <string name="server_button">Host game</string>
    <string name="client_button">Connect as client</string>
    <string name="title_activity_p2p">Connect to peer</string>
    <string name="title_activity_main">Fleet Commander</string>
    <string name="p2p_button">Connect to peer</string>
    <string name="ip_filler">Enter server IP</string>
    <string name="new_game">New Game</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="message_hint">Enter message here</string>
    <string name="sendButtonText">Send</string>
    <string name="title_activity_play">Let\'s Play</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pause_play">Pause</string>
    <string name="play_play">Play</string>
    <string name="timer">Timer</string>
    <string name="my_ip">My IP</string>
    <string name="waiting">Waiting</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="stats">Statistics</string>
    <string name="stats_blurb">There is a list of MAC Addresses of opponents, followed by the matches you played together, the date, time and score</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
